infrastructure/base/networking/headplane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    name: headscale
