infrastructure/base/networking/headplane/ingressroute-local.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headplane-local
  namespace: headscale
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: headscale-cors@kubernetescrd
spec:
  entryPoints:
    - web
  routes:
  - match: Path(`/admin`) || PathPrefix(`/admin/`)
    kind: Rule
    priority: 10
    services:
    - name: headplane
      port: 3000
